@@ -1,6 +1,5 @@
 package com.app.controllers;
 
-import java.util.Collections;
 import java.util.Map;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -8,7 +7,6 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -20,12 +18,11 @@ import com.app.payloads.UserDTO;
 import com.app.security.JWTUtil;
 import com.app.services.UserService;
 
-import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import jakarta.validation.Valid;
 
 @RestController
 @RequestMapping("/api")
-@SecurityRequirement(name = "E-Commerce Application")
+//@SecurityRequirement(name = "E-Commerce Application")
 public class AuthController {
 
 	@Autowired
@@ -37,34 +34,23 @@ public class AuthController {
 	@Autowired
 	private AuthenticationManager authenticationManager;
 
-	@Autowired
-	private PasswordEncoder passwordEncoder;
+	
 
 	@PostMapping("/register")
-	public ResponseEntity<Map<String, Object>> registerHandler(@Valid @RequestBody UserDTO user)
+	public ResponseEntity<Map<String, Object>> register(@Valid @RequestBody UserDTO user)
 			throws UserNotFoundException {
-		String encodedPass = passwordEncoder.encode(user.getPassword());
-
-		user.setPassword(encodedPass);
-
 		UserDTO userDTO = userService.registerUser(user);
-
 		String token = jwtUtil.generateToken(userDTO.getEmail());
-
-		return new ResponseEntity<Map<String, Object>>(Collections.singletonMap("jwt-token", token),
+		return new ResponseEntity<Map<String, Object>>(Map.of("success","true","user-token", token),
 				HttpStatus.CREATED);
 	}
 
 	@PostMapping("/login")
-	public Map<String, Object> loginHandler(@Valid @RequestBody LoginCredentials credentials) {
-
+	public ResponseEntity<Map<String, Object>> login(@Valid @RequestBody LoginCredentials credentials) {
 		UsernamePasswordAuthenticationToken authCredentials = new UsernamePasswordAuthenticationToken(
 				credentials.getEmail(), credentials.getPassword());
-
 		authenticationManager.authenticate(authCredentials);
-
 		String token = jwtUtil.generateToken(credentials.getEmail());
-
-		return Collections.singletonMap("jwt-token", token);
+		return new ResponseEntity<>(Map.of("success","true","user-token", token),HttpStatus.OK);
 	}
 }
